--- a/pvc-sample.yaml
+++ b/pvc-sample.yaml
@@ -7,7 +7,7 @@ metadata:
     name: nginx-with-pvc
 
 spec:
-  storageClassName: ebs-sc
+  storageClassName: gp2
   accessModes:
     - ReadWriteOnce
   resources:
